# clickwise

./: .gitignore  CMakeLists.txt  README.md
src/: ApplicationFilter.cpp  ApplicationFilter.h  AutoClicker.cpp  AutoClicker.h  ConfigManager.cpp  ConfigManager.h  InputHandler.cpp  InputHandler.h  UI.cpp  UI.h  main.cpp
